[gd_scene load_steps=18 format=3 uid="uid://dbh8lpivtd4oc"]

[ext_resource type="FontFile" uid="uid://co87kw26h5rcj" path="res://assets/fonts/gameboy_font.ttf" id="1_ivhln"]
[ext_resource type="Script" uid="uid://pay5xtvesqec" path="res://scenes/ui_elements/marker_button.gd" id="2_fsgkk"]
[ext_resource type="Texture2D" uid="uid://ds6wp3aeb3cj6" path="res://assets/sprites/ui/ui_marker/spinning_marker_frame_1.png" id="2_y1gm2"]
[ext_resource type="Texture2D" uid="uid://67fked35alax" path="res://assets/sprites/ui/ui_marker/spinning_marker_frame_2.png" id="3_qelnp"]
[ext_resource type="Texture2D" uid="uid://glv21xk0kk7g" path="res://assets/sprites/ui/ui_marker/spinning_marker_frame_3.png" id="4_t2dlq"]
[ext_resource type="Texture2D" uid="uid://bf7t4fuf0fnmk" path="res://assets/sprites/ui/ui_marker/spinning_marker_frame_4.png" id="5_qio3q"]
[ext_resource type="Texture2D" uid="uid://bvvt4aqe037p5" path="res://assets/sprites/ui/ui_marker/spinning_marker_frame_5.png" id="6_8mndg"]
[ext_resource type="Texture2D" uid="uid://cq8febncttme0" path="res://assets/sprites/ui/ui_marker/spinning_marker_frame_6.png" id="7_8wyb2"]
[ext_resource type="AudioStream" uid="uid://dpcqqfd30coao" path="res://assets/audio/sfx/button_select.wav" id="9_4cno3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q6qx6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ccbub"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1p4ua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1gybf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m38v1"]

[sub_resource type="Animation" id="Animation_8hqkm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y1gm2")]
}

[sub_resource type="Animation" id="Animation_7buim"]
resource_name = "marker_spin"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_y1gm2"), ExtResource("3_qelnp"), ExtResource("4_t2dlq"), ExtResource("5_qio3q"), ExtResource("6_8mndg"), ExtResource("7_8wyb2")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kc3o1"]
_data = {
&"RESET": SubResource("Animation_8hqkm"),
&"marker_spin": SubResource("Animation_7buim")
}

[node name="MarkerButton" type="Button"]
theme_override_colors/font_hover_color = Color(0.607843, 0.67451, 0.0588235, 1)
theme_override_colors/font_pressed_color = Color(0.607843, 0.67451, 0.0588235, 1)
theme_override_colors/font_focus_color = Color(0.607843, 0.67451, 0.0588235, 1)
theme_override_colors/font_color = Color(0.607843, 0.8, 0.0588235, 1)
theme_override_colors/font_outline_color = Color(0.0588235, 0.219608, 0.0588235, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_ivhln")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_q6qx6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ccbub")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1p4ua")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1gybf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_m38v1")
text = "BUTTON"
script = ExtResource("2_fsgkk")

[node name="Marker" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = 5.0
offset_right = -34.0
offset_bottom = 25.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_y1gm2")
stretch_mode = 3

[node name="FocusSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4cno3")
volume_db = -9.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kc3o1")
}
autoplay = "marker_spin"
speed_scale = 1.25

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
